adding test code

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,6 @@
     <h1>hi, world!</h1>
     <img src="img/face.jpg">
     <div id="container" class="blue-border"/>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="included.js"></script>
   </body>
 </html>
